# AnythingAgent

./: .env_example  .gitignore  INSTALL.md  LICENSE  README.md  README_cn.md  environment.yml  logging_config.json  pyproject.toml  requirements.txt  start.sh  status.sh  stop.sh  test_analyzer.py
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  chat.py  files.py  health.py  models.py  version.py
app/core/: config.py  logger.py  middleware.py
app/db/: base.py  vector_store.py
app/examples/: langchain_factory_example.py
app/graph/: readme.md
app/graph/agents/: __init__.py  chatbot.py  mcp.py  planner.py  pycoder.py  reader.py  researcher.py  supervisor.py  types.py  utils.py  worker.py
app/graph/states/: __init__.py  base_state.py  config.py
app/models/: README.md  base.py  context_aware.py  echo.py  example_model.py  langchain_factory.py  langchain_manager.py  llm_manager.py  manager.py  vector_model.py
app/models/deep_analyzer/: __init__.py  config.yaml  main.py  prompt_logic.md  templates.py
app/models/langchain_analyzer/: README.md  __init__.py  analyzer.py  config_example.yaml  main.py  message.py  planner.py  route.py  state.py  think.py  util.py  worker.py
app/models/multi_agent/: __init__.py  config.yaml  main.py
app/schemas/: chat.py  file.py
app/utils/: common.py  vectorizer.py
doc/: anything_model_implement.md  api.mdc  code_principles.md  deep_analyzer_model.md  index.md  langgraph_multi_agent.md  langgraph_usage.md  model_deploy.md  openai_api.md  tech.md  testing.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
examples/models/isolated_test_model/: config.yaml  main.py  requirements.txt
examples/models/test_model/: main.py
examples/models/test_model/vocab_data/: vocab.txt
test/: __init__.py  test_analyzer.py  test_chat_api.sh
test/langchain/: README.md  __init__.py  langchain_fixes.md  test_langchain_imports.py  test_langchain_manager.py
test/models/test_model/: config.yaml  main.py  requirements.txt
