[tool.poetry]
name = "anything-agent"
version = "0.1.0"
description = "A service platform based on Model Context Protocol (MCP)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
lancedb = "^0.5.3"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
langchain-core = "^0.3.40"
langchain = "^0.3.19"
langchain-text-splitters = "^0.3.6"
langchain-community = "^0.3.18"
langchain-experimental = "^0.3.5rc1"
langchain-deepseek = "^0.1.2"
langchain-huggingface = "^0.1.2"
langchain-milvus = "^0.1.8"
langchain-mongodb = "^0.5.0"
langchain-ollama = "^0.2.3"
langchain-openai = "^0.3.7"
langchain-postgres = "^0.0.13"
langchain-redis = "^0.2.0"
langchain-anthropic = "^0.3.8"
langchain-groq = "^0.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true 