[tool.poetry]
name = "anything-agent"
version = "0.1.0"
description = "A service platform based on Model Context Protocol (MCP)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"

# 核心依赖
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"

# 数据库相关
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
lancedb = "^0.5.7"

# 数据处理
numpy = "^1.26.4"
pandas = "^2.2.3"

# 文件处理
python-multipart = "^0.0.20"
aiofiles = "^23.2.1"

# 工具库
tenacity = "^9.0.0"
pyyaml = "^6.0.2"

# AI 相关
litellm = "^1.61.20"

# Langchain 相关
langchain-core = "^0.3.40"
langchain = "^0.3.19"
langchain-text-splitters = "^0.3.6"
langchain-community = "^0.3.18"
langchain-experimental = "^0.3.5rc1"
langchain-deepseek = "^0.1.2"
langchain-huggingface = "^0.1.2"
langchain-milvus = "^0.1.8"
langchain-mongodb = "^0.5.0"
langchain-ollama = "^0.2.3"
langchain-openai = "^0.3.7"
langchain-postgres = "^0.0.13"
langchain-redis = "^0.2.0"
langchain-anthropic = "^0.3.8"
langchain-groq = "^0.2.4"

# LangGraph 相关
langgraph = "^0.0.26"

[tool.poetry.group.dev.dependencies]
# 测试工具
pytest = "^8.3.3"
pytest-asyncio = "^0.23.5"
httpx = "^0.28.1"

# 代码质量工具
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

# 调试工具
ipython = "^8.22.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true 